--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -19,6 +20,8 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "@hapi/boom": "^10.0.1",
+    "express": "^4.21.1",
+    "joi": "^17.13.3"
   }
 }
