--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrations:generate":"sequelize-cli migration:generate --name",
+    "migrations:run":"sequelize-cli db:migrate",
+    "migrations:revert":"sequelize-cli db:migrate:undo",
+    "migrations:delete":"sequelize-cli db:migrate:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +21,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^3.1.7",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
@@ -25,6 +30,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
+    "mysql2": "^3.11.4",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
