--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
-    "sequelize-cli": "^6.6.2"
+    "prettier": "^3.3.3"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
@@ -33,6 +32,7 @@
     "mysql2": "^3.11.4",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2"
   }
 }
