--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 NODE_ENV=''
+API_KEY=
 DATABASE_URL=''
 DB_ENGINE='postgres'
 PORT=3000
-DB_USER=''
-DB_PASSWORD=''
-DB_HOST=''
-DB_NAME=''
-DB_PORT=''
+JWT_SECRET=''
+SMTP_EMAIL=''
+SMTP_PASS=''
